<resources>
    <string name="app_name">FIFA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EA Sports</string>
    <string name="nav_header_subtitle">FIFA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_players">New Players</string>
    <string name="menu_add_players">Add Players</string>
    <string name="player_last_name">Player last name</string>
    <string name="player_name">Player name</string>
    <string name="player_club">Club name</string>
    <string name="age">Age</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_valid_email">Only after register this content appears</string>
    <string name="already_have_a_user">Already have a user?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
</resources>