<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.netanelma.FIFA.ui.homerecycler.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_players"
        android:name="edu.netanelma.FIFA.ui.newplayers.PlayersFragment"
        android:label="@string/menu_new_players"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/nav_add_players"
        android:name="edu.netanelma.FIFA.ui.addplayers.AddPlayersFragment"
        android:label="@string/menu_add_players"
        tools:layout="@layout/fragment_add_players" />
</navigation>